tests/shape_subtype/shape_subtype.exp
Error ----------------------------------------------------------------------------------------------------- test.js:8:28

Cannot assign object literal to `z2` because property `s` is missing in `typeof o2` [1] but exists in object
literal [2]. [prop-missing]

   test.js:8:28
   8| let z2:$Shape<typeof o2> = {s : 4}; // flow error
                                 ^^^^^^^ [2]

References:
   test.js:8:15
   8| let z2:$Shape<typeof o2> = {s : 4}; // flow error
                    ^^^^^^^^^ [1]


Error ---------------------------------------------------------------------------------------------------- test.js:21:29

Cannot assign object literal to `z8` because property `y` is missing in `typeof a` [1] but exists in object literal [2].
[incompatible-use]

   test.js:21:29
   21| let z8 : $Shape<typeof a> = {y : 4}; // flow error
                                   ^^^^^^^ [2]

References:
   test.js:21:17
   21| let z8 : $Shape<typeof a> = {y : 4}; // flow error
                       ^^^^^^^^ [1]


Error ---------------------------------------------------------------------------------------------------- test.js:24:27

Cannot assign object literal to `z9` because property `x` is missing in number [1] but exists in object literal [2].
[incompatible-use]

   test.js:24:27
   24| let z9 : $Shape<number> = {x : 3}; // flow error
                                 ^^^^^^^ [2]

References:
   test.js:24:17
   24| let z9 : $Shape<number> = {x : 3}; // flow error
                       ^^^^^^ [1]


Error ---------------------------------------------------------------------------------------------------- test.js:27:28

Cannot assign object literal to `z11` because property `x` is missing in string [1] but exists in object literal [2].
[incompatible-use]

   test.js:27:28
   27| let z11 : $Shape<string> = {x : 3}; // flow error
                                  ^^^^^^^ [2]

References:
   test.js:27:18
   27| let z11 : $Shape<string> = {x : 3}; // flow error
                        ^^^^^^ [1]


Error ---------------------------------------------------------------------------------------------------- test.js:29:24

Cannot assign object literal to `z14` because property `p` is missing in object type [1] but exists in object
literal [2]. [prop-missing]

   test.js:29:24
   29| let z14 : $Shape<{}> = {p : 'foo'}; // flow error
                              ^^^^^^^^^^^ [2]

References:
   test.js:29:18
   29| let z14 : $Shape<{}> = {p : 'foo'}; // flow error
                        ^^ [1]


Error ---------------------------------------------------------------------------------------------------- test.js:63:22

Cannot assign object literal to `_b` because property `y` is missing in `A` [1] but exists in object literal [2].
[prop-missing]

   test.js:63:22
   63| let _b : $Shape<A> = { y : 4 }; // flow error
                            ^^^^^^^^^ [2]

References:
   test.js:63:17
   63| let _b : $Shape<A> = { y : 4 }; // flow error
                       ^ [1]


Error ---------------------------------------------------------------------------------------------------- test.js:66:22

Cannot assign object literal to `_e` because property `z` is missing in `B` [1] but exists in object literal [2].
[prop-missing]

   test.js:66:22
   66| let _e : $Shape<B> = { z : 4 }; // flow error
                            ^^^^^^^^^ [2]

References:
   test.js:66:17
   66| let _e : $Shape<B> = { z : 4 }; // flow error
                       ^ [1]


Error ---------------------------------------------------------------------------------------------------- test.js:70:22

Cannot assign object literal to `_i` because property `a` is missing in `C` [1] but exists in object literal [2].
[prop-missing]

   test.js:70:22
   70| let _i : $Shape<C> = { a : 4 }; // flow error
                            ^^^^^^^^^ [2]

References:
   test.js:70:17
   70| let _i : $Shape<C> = { a : 4 }; // flow error
                       ^ [1]


Error ---------------------------------------------------------------------------------------------------- test.js:72:25

Cannot assign object literal to `_k` because property `x` is missing in `Empt` [1] but exists in object literal [2].
[prop-missing]

   test.js:72:25
   72| let _k : $Shape<Empt> = { x : 4 }; // flow error
                               ^^^^^^^^^ [2]

References:
   test.js:72:17
   72| let _k : $Shape<Empt> = { x : 4 }; // flow error
                       ^^^^ [1]


Error ---------------------------------------------------------------------------------------------------- test.js:83:22

Cannot assign object literal to `_l` because `A` [1] is incompatible with `B` [2] in property `n`. [incompatible-type]

   test.js:83:22
   83| let _l : $Shape<D> = {m : a_inst, n : a_inst}; // flow error
                            ^^^^^^^^^^^^^^^^^^^^^^^^

References:
   test.js:74:14
   74| let a_inst : A = new A;
                    ^ [1]
   test.js:80:7
   80|   n : B = b_inst;
             ^ [2]



Found 10 errors
